engine-net-2/examples/Errors/UserMethodsOnlyAvailableForInheritanceTypesCompiled.grg
#include "Rules.grg"

sequence s1
{
	{ o:double=3.141592654 ; d:double=o.ff() }
}
